# IFCto3DTiles

./: .gitignore  Build.sh  CMakeLists.txt  Dockerfile  README.md
JavaInterface/src/: App.java  MyIfc.java  run.sh
JavaInterface/src/com/tile/: run.sh
JavaInterface/src/com/tile/ifc/: App.java  test.java
include/: MyIfc.h  MyMesh.h  Option.h  com_tile_ifc_MyIfc.h
include/vcglib/eigenlib/Eigen/src/Core/arch/CUDA/: Half.h
include/vcglib/vcg/complex/algorithms/: local_optimization.h
include/vcglib/vcg/complex/algorithms/local_optimization/: tri_edge_collapse.h
include/vcglib/vcg/simplex/tetrahedron/: pos.h
include/vcglib/wrap/io_trimesh/: io_ply.h
lib/3DTiles/: My3DTilesExporter.h  MyMeshOptimizer.h  SpatialTree.h  TreeBuilder.h
lib/gltfHandler/: MyGltfExporter.h
models/: wall.ifc
src/3DTiles/: My3DTilesExporter.cpp  MyMeshOptimizer.cpp  SpatialTree.cpp  TreeBuilder.cpp
src/Application/: MyIfc.cpp  main.cpp
src/Test/: main.cpp
src/gltfHandler/: MyGltfExporter.cpp
